<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Atlas IPTV Interface</string>
    <string name="title_activity_launcher">Atlas IPTV Channel Browser</string>
    <string name="hello_world">Hello world!</string>
	
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, IPTVPlayerActivity!</string>

    <string name="local_url">Local URL</string>
    <string name="udp_url">UDP URL</string>
    <string name="start_player">Start Player</string>
    <string name="audio_stream">Audio Stream</string>
    <string name="language">language</string>
    <string name="audio_set">Audio Set</string>
    <string name="lang_set">Subtitle Set</string>
    <string name="dialog_title">IPTV Player Settings Panel</string>
    <string name="desc">dialog imge</string>
    <string name="udp_head">udp://</string>


</resources>
